--- a/scss/utilities/_effects.scss
+++ b/scss/utilities/_effects.scss
@@ -6,7 +6,7 @@
 @use '../core' as *;
 
 $utilities: (
-  'shadow': (
+  shadow: (
     property: box-shadow,
     class: shadow,
     state: hover focus,
