--- a/scss/utilities/_grid.scss
+++ b/scss/utilities/_grid.scss
@@ -6,7 +6,7 @@
 @use '../core' as *;
 
 $utilities: (
-  'grid-template-columns': (
+  grid-template-columns: (
     responsive: true,
     property: grid-template-columns,
     class: grid-cols,
@@ -26,7 +26,7 @@ $utilities: (
       12: repeat(12, minmax(0, 1fr)),
     ),
   ),
-  'grid-column': (
+  grid-column: (
     responsive: true,
     property: grid-column,
     class: col,
@@ -47,7 +47,7 @@ $utilities: (
       span-full: span 1 / span -1,
     ),
   ),
-  'grid-column-start': (
+  grid-column-start: (
     responsive: true,
     property: grid-column-start,
     class: col,
@@ -68,7 +68,7 @@ $utilities: (
       start-auto: auto,
     ),
   ),
-  'grid-column-end': (
+  grid-column-end: (
     responsive: true,
     property: grid-column-end,
     class: col,
@@ -89,7 +89,7 @@ $utilities: (
       end-auto: auto,
     ),
   ),
-  'grid-template-rows': (
+  grid-template-rows: (
     responsive: true,
     property: grid-template-rows,
     class: grid-rows,
@@ -103,7 +103,7 @@ $utilities: (
       6: repeat(6, minmax(0, 1fr)),
     ),
   ),
-  'grid-row': (
+  grid-row: (
     responsive: true,
     property: grid-row,
     class: row,
@@ -124,13 +124,13 @@ $utilities: (
       span-full: span 1 / span -1,
     ),
   ),
-  'grid-auto-flow': (
+  grid-auto-flow: (
     responsive: true,
     property: grid-auto-flow,
     class: grid-flow,
     values: row col row-dense col-dense,
   ),
-  'grid-auto-columns': (
+  grid-auto-columns: (
     responsive: true,
     property: grid-auto-columns,
     class: auto-cols,
@@ -141,7 +141,7 @@ $utilities: (
       fr: minmax(0, 1fr),
     ),
   ),
-  'grid-auto-rows': (
+  grid-auto-rows: (
     responsive: true,
     property: grid-auto-rows,
     class: auto-rows,
