--- a/scss/utilities/_spacing.scss
+++ b/scss/utilities/_spacing.scss
@@ -5,90 +5,58 @@
 @use '../core/generators' as *;
 @use '../core' as *;
 
+$spacing: theme(spacing);
+$margin-spacing: map-merge(
+  $spacing,
+  (
+    auto: auto,
+  )
+);
+
+// --------------------------------
+
 $utilities: (
   'margin': (
     property: margin,
     class: m,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-x': (
     property: margin-right margin-left,
     class: mx,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-y': (
     property: margin-top margin-bottom,
     class: my,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-top': (
     property: margin-top,
     class: mt,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-right': (
     property: margin-right,
     class: mr,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-bottom': (
     property: margin-bottom,
     class: mb,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   'margin-left': (
     property: margin-left,
     class: ml,
     responsive: true,
-    values:
-      map-merge(
-        theme(spacing),
-        (
-          auto: auto,
-        )
-      ),
+    values: $margin-spacing,
   ),
   '-margin': (
     property: margin,
@@ -136,60 +104,60 @@ $utilities: (
     property: padding,
     class: p,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-x': (
     property: padding-right padding-left,
     class: px,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-y': (
     property: padding-top padding-bottom,
     class: py,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-top': (
     property: padding-top,
     class: pt,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-right': (
     property: padding-right,
     class: pr,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-bottom': (
     property: padding-bottom,
     class: pb,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'padding-left': (
     property: padding-left,
     class: pl,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'gap': (
     property: gap,
     class: gap,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'gap-x': (
     property: column-gap,
     class: gap-x,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
   'gap-y': (
     property: row-gap,
     class: gap-y,
     responsive: true,
-    values: theme(spacing),
+    values: $spacing,
   ),
 );
