--- a/dev/assets/scss/_utilities.scss
+++ b/dev/assets/scss/_utilities.scss
@@ -3,8 +3,10 @@
 @forward 'config';
 @use 'koi';
 
+// We can include the utilities directly or use the pre-built CSS file, this way the build time during development will be largely reduced, there is on catch though, this build won't assume any configuration changes.
+
 // @include koi.utilities();
 
-// << Insert your utility classes here >>
-
 @include meta.load-css('../../../dist/koi-utilities.css');
+
+// << Insert your utility classes here >>
