--- a/scss/theme/_theme.scss
+++ b/scss/theme/_theme.scss
@@ -4,7 +4,7 @@
 
 @use 'sass:map';
 
-@use '../core/api/config' as *;
+@use '../config' as *;
 @use '../core/generators/vars' as *;
 @use 'tokens' as *;
 @use 'color';
