--- a/scss/utilities/_size.scss
+++ b/scss/utilities/_size.scss
@@ -4,7 +4,7 @@
 
 @use 'sass:map';
 
-@use '../theme/tokens/spacing' as *;
+@use '../tokens/spacing' as *;
 @use '../core/generators' as *;
 @use '../core' as *;
 
