--- a/scss/tokens/_colors.scss
+++ b/scss/tokens/_colors.scss
@@ -3,8 +3,8 @@
 // --------------------------------
 
 $colors: (
-  white: #ffffff,
-  black: #000000,
+  white: #fff,
+  black: #000,
   primary: (
     0: #f0fffa,
     1: #c9fded,
