--- a/scss/core/api/_animation.scss
+++ b/scss/core/api/_animation.scss
@@ -2,7 +2,7 @@
 //   Animation
 // --------------------------------
 
-@use 'config' as *;
+@use '../../config' as *;
 @use 'theme' as *;
 
 // --------------------------------
