--- a/scss/core/api/_layer.scss
+++ b/scss/core/api/_layer.scss
@@ -2,7 +2,7 @@
 //   Layer / Z-Index
 // --------------------------------
 
-@use 'config' as *;
+@use '../../config' as *;
 @use 'theme' as *;
 
 $-default-layer: config(fallbacks, layer);
