--- a/scss/base/_duration.scss
+++ b/scss/base/_duration.scss
@@ -2,14 +2,13 @@
 //   Duration Styles
 // --------------------------------
 
+@use '../config/internal' as *;
 @use '../core' as *;
-
-$custom-prop-name: duration;
 
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
 @mixin vars {
-  @include generate-css-vars(theme(duration), $custom-prop-name);
+  @include generate-css-vars(theme(duration), $duration-prefix);
 }
