--- a/scss/core/api/_border.scss
+++ b/scss/core/api/_border.scss
@@ -2,7 +2,7 @@
 //   Border
 // --------------------------------
 
-@use 'config' as *;
+@use '../../config' as *;
 @use 'theme' as *;
 
 $-default-radius: config(fallbacks, radius);
