--- a/scss/core/api/_typography.scss
+++ b/scss/core/api/_typography.scss
@@ -5,7 +5,7 @@
 @use 'sass:map';
 @use 'sass:list';
 
-@use 'config' as *;
+@use '../../config' as *;
 @use 'theme' as *;
 
 // --------------------------------
