--- a/scss/tokens/_spacing.scss
+++ b/scss/tokens/_spacing.scss
@@ -12,41 +12,41 @@ $spacer: map.get($config, spacer);
 // Base spacing system
 $spacing-scale: (
   0: 0,
-  1: rem(1),
-  2: rem(2),
-  4: rem(4),
-  6: rem(6),
-  8: rem(8),
-  10: rem(10),
-  12: rem(12),
-  14: rem(14),
-  16: rem(16),
-  20: rem(20),
-  24: rem(24),
-  28: rem(28),
-  32: rem(32),
-  36: rem(36),
-  40: rem(40),
-  44: rem(44),
-  48: rem(48),
-  56: rem(56),
-  64: rem(64),
-  80: rem(80),
-  96: rem(96),
-  112: rem(112),
-  128: rem(128),
-  144: rem(144),
-  160: rem(160),
-  176: rem(176),
-  192: rem(192),
-  208: rem(208),
-  224: rem(224),
-  256: rem(256),
-  288: rem(288),
-  320: rem(320),
-  384: rem(384),
-  448: rem(448),
-  512: rem(512),
+  1: px-to-rem(1),
+  2: px-to-rem(2),
+  4: px-to-rem(4),
+  6: px-to-rem(6),
+  8: px-to-rem(8),
+  10: px-to-rem(10),
+  12: px-to-rem(12),
+  14: px-to-rem(14),
+  16: px-to-rem(16),
+  20: px-to-rem(20),
+  24: px-to-rem(24),
+  28: px-to-rem(28),
+  32: px-to-rem(32),
+  36: px-to-rem(36),
+  40: px-to-rem(40),
+  44: px-to-rem(44),
+  48: px-to-rem(48),
+  56: px-to-rem(56),
+  64: px-to-rem(64),
+  80: px-to-rem(80),
+  96: px-to-rem(96),
+  112: px-to-rem(112),
+  128: px-to-rem(128),
+  144: px-to-rem(144),
+  160: px-to-rem(160),
+  176: px-to-rem(176),
+  192: px-to-rem(192),
+  208: px-to-rem(208),
+  224: px-to-rem(224),
+  256: px-to-rem(256),
+  288: px-to-rem(288),
+  320: px-to-rem(320),
+  384: px-to-rem(384),
+  448: px-to-rem(448),
+  512: px-to-rem(512),
 ) !default;
 
 $spacers: (
